--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "mercurio-server",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Servidor para Módulo Unik Qml Engine Mercurio",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -31,5 +31,6 @@
     "nodemailer": "^6.4.6",
     "path": "^0.12.7",
     "serve-static": "^1.14.1"
-  }
+  },
+  "devDependencies": {}
 }
