se edita install.sh 4

--- a/mercurio.desktop
+++ b/mercurio.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Encoding=UTF-8
 Name=Script
 Type=Application
-Exec=/usr/local/share/mercurio-server-nodejs.sh
+Exec=xfce4-terminal -e "bash -c 'cd /root/mercurio-server && nodejs index.js; exec bash'"
 Icon=
 Terminal=true
 StartupNotify=false
