--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "child_process": "^1.0.2",
     "connect": "^3.7.0",
     "express": "^4.17.1",
+    "forever": "^3.0.0",
     "fs": "0.0.1-security",
     "nodemailer": "^6.4.6",
     "path": "^0.12.7",
