--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/nextsigner/mercurio-server#readme",
   "dependencies": {
+    "@goldenius/hades-js": "^2.1.2",
     "child_process": "^1.0.2",
     "connect": "^3.7.0",
     "express": "^4.17.1",
